<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_baseline_border_color_black_24"
        android:title="@string/title_projects" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_baseline_chat_bubble_black_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_person_outline_black_24"
        android:title="@string/title_settings" />
</menu>